build-questions-half-done

--- a/week1/index.html
+++ b/week1/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h2>All the assignments are related to Js so open your inspect and see the results</h2>
-    <script src="arrow_func.js"></script>
+    <a href="es6.html">Rohit Dhatrak notion questions</a>
+    <a href="build.html">NeoG build questions</a>
+    
 </body>
 
 </html>
