build-questions-added

--- a/week1/build.html
+++ b/week1/build.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h2>Neog github build questions</h2>
-    <script src="build.js"></script>
+    <a href="first.html">Operator branching looping</a>
+    <a href="second.html">Function</a>
+    <a href="third.html">Operator branching looping</a>
+    <a href="fourth.html">Operator branching looping</a>
+    <a href="fifth.html">Operator branching looping</a>
+    
 </body>
 </html>
