--- a/week2/card/card.html
+++ b/week2/card/card.html
@@ -4,18 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="card.css">
+    <title>Card Assignment</title>
 </head>
 <body>
-    <main class="cards">
+    <main class="flex-cards">
         <article class="card">
-            <img src="week2/images/card_image.jpg" alt="Card Image" >
+            <img src="images/card_image3.jpg" alt="Card Image" >
             <div class="written">
-                <h3 class="head">This is something.</h3>
-                <p class="para">This is nothing</p>
+                <h2 class="head">This is something.</h2>
+                <p class="name">This is nothing</p>
+                <p class="para">Megha is the dumbest person on earth.</p>
+            </div>
+            <div class="footer">
                 <button class="btn">Read</button>
+                <button class="btn">Bookmark</button>
+                <img class="card-icon" src="https://api.iconify.design/mdi:cards-heart-outline.svg" alt="Like button" >
+                <img class="card-icon" src="https://api.iconify.design/mdi:share-variant.svg" alt="Share button" >
+                <img class="card-icon" src="https://api.iconify.design/mdi:dots-vertical.svg" alt="Vertical Dots" >
             </div>
         </article>
+        <article class="card">
+            <div class="written">
+                <h2 class="head">This is something.</h2>
+                <p class="name">This is nothing</p>
+                <p class="para">Megha is the dumbest person on earth.</p>
+            </div>
+            <img src="images/card_image3.jpg" alt="Card Image" >
+            
+            <div class="footer">
+                <button class="btn">Read</button>
+                <button class="btn">Bookmark</button>
+                <img class="card-icon" src="https://api.iconify.design/mdi:cards-heart-outline.svg" alt="Like button" >
+                <img class="card-icon" src="https://api.iconify.design/mdi:share-variant.svg" alt="Share button" >
+                <img class="card-icon" src="https://api.iconify.design/mdi:dots-vertical.svg" alt="Vertical Dots" >
+            </div>
+        </article>
+        
     </main>
 </body>
 </html>
