--- a/week2/chips/chips.html
+++ b/week2/chips/chips.html
@@ -13,6 +13,19 @@
 </head>
 <body>
     <div class="container">
+        <div class="find-container main-container">
+            <header class="head">
+                <h3>Basic</h3>
+            </header>
+            <div class="chips-container marginned">
+                <h5>Favourite fruits</h5>
+                <ul class="chips-list margin">
+                    <li class="list-item input">mango</li>
+                    <li class="list-item input user-input"> <input type="text" class="input-fruit" placeholder="New Favourite..."></li>
+                </ul>
+                
+            </div>
+        </div>
         <div class="basic-container main-container">
             <header class="head">
                 <h3>Basic</h3>
