--- a/week2/tabs/tab.html
+++ b/week2/tabs/tab.html
@@ -57,6 +57,31 @@
 
     </div>
 </article>
+<!-- <article class="main-container">
+    
+    <header class="heading">
+        
+        <h3><i class="far fa-bars ham"></i>Icons</h3>
+        <div class="side-icons">
+            <ul class="list">
+                <li class="list-item"><i class="fas fa-share-alt"></i></li>
+                <li class="list-item"><i class="far fa-search"></i></li>
+                <li class="list-item"><i class="fas fa-ellipsis-v"></i></li>
+            </ul>
+        </div>
+    </header>
+    <div class="tabs width">
+        <button class="tab-btn"><i class="fas fa-dog icons"></i>DOGS</button>
+        <button class="tab-btn"><i class="fas fa-cat icons"></i>CATS</button>
+        <button class="tab-btn"><i class="fab fa-earlybirds icons"></i>BIRDS</button>
+        <button class="tab-btn"><i class="fas fa-dog icons"></i>DOGS</button>
+        <button class="tab-btn"><i class="fas fa-cat icons"></i>CATS</button>
+        <button class="tab-btn"><i class="fab fa-earlybirds icons"></i>BIRDS</button>
+    </div>
+    <div class="space">
+
+    </div>
+</article> -->
 </main>
 </body>
 </html>
